# agent-package-manager

./: .dockerignore  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.mjs  nx.json  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: deploy-docs.yml  publish-pypi-test.yml
apps/aam-backend/: README.md  alembic.ini  project.json  pyproject.toml
apps/aam-backend/alembic/: env.py
apps/aam-backend/alembic/versions/: 001_add_scope_column.py  002_add_governance_quality.py
apps/aam-backend/src/aam_backend/: __init__.py  main.py
apps/aam-backend/src/aam_backend/api/v1/: __init__.py
apps/aam-backend/src/aam_backend/api/v1/endpoints/: audit.py  auth.py  packages.py  users.py
apps/aam-backend/src/aam_backend/core/: config.py  logging.py  naming.py  security.py
apps/aam-backend/src/aam_backend/models/: __init__.py  base.py  package.py  user.py
apps/aam-backend/tests/: __init__.py  test_main.py
apps/aam-cli/: README.md  project.json  pyproject.toml
apps/aam-cli/src/aam_cli/: __init__.py  main.py
apps/aam-cli/src/aam_cli/adapters/: __init__.py  base.py  claude.py  codex.py  copilot.py  cursor.py  factory.py
apps/aam-cli/src/aam_cli/commands/: build.py  client_init.py  config.py  convert.py  create_package.py  diff.py  doctor.py  init_package.py  install.py  list_packages.py  mcp_serve.py  outdated.py  pack.py  publish.py  registry.py  search.py  show_package.py  source.py  uninstall.py  upgrade.py  validate.py  verify.py
apps/aam-cli/src/aam_cli/commands/pkg/: __init__.py  build.py  create.py  init.py  pack.py  publish.py  validate.py
apps/aam-cli/src/aam_cli/converters/: __init__.py  frontmatter.py  mappings.py
apps/aam-cli/src/aam_cli/core/: __init__.py  config.py  installer.py  manifest.py  resolver.py  version.py  workspace.py
apps/aam-cli/src/aam_cli/detection/: __init__.py  scanner.py
apps/aam-cli/src/aam_cli/mcp/: __init__.py  resources.py  server.py  tools_read.py  tools_write.py
apps/aam-cli/src/aam_cli/registry/: __init__.py  base.py  factory.py  local.py
apps/aam-cli/src/aam_cli/services/: __init__.py  checksum_service.py  client_init_service.py  config_service.py  convert_service.py  doctor_service.py  git_service.py  init_service.py  install_service.py  package_service.py  publish_service.py  recommend_service.py  registry_service.py  search_service.py  source_service.py  upgrade_service.py  validate_service.py
apps/aam-cli/src/aam_cli/utils/: __init__.py  archive.py  checksum.py  deprecation.py  dns.py  git_url.py  naming.py  paths.py  text_match.py  yaml_utils.py
apps/aam-cli/tests/: __init__.py  conftest.py  test_main.py
apps/aam-cli/tests/evals/: test_search_ranking_eval.py  test_search_suggestion_eval.py
apps/aam-cli/tests/evals/datasets/: search_ranking_dataset.py  search_suggestion_dataset.py
apps/aam-cli/tests/integration/: __init__.py  conftest.py  test_integration_source_lifecycle.py  test_integration_verify_diff.py  test_mcp_integration.py
apps/aam-cli/tests/unit/: __init__.py  test_adapters_factory.py  test_commands_search.py  test_convert.py  test_mcp_resources.py  test_mcp_server.py  test_mcp_tools_read.py  test_mcp_tools_write.py  test_services_config.py  test_services_doctor.py  test_services_init.py  test_services_package.py  test_services_recommend.py  test_services_search.py  test_unit_checksum_service.py  test_unit_client_init.py  test_unit_create_from_source.py  test_unit_default_sources.py  test_unit_git_service.py  test_unit_git_url.py  test_unit_global_flag.py  test_unit_help_grouping.py  test_unit_install_from_source.py  test_unit_mcp_init_tools.py  test_unit_mcp_source_resources.py  test_unit_mcp_source_tools_read.py  test_unit_mcp_source_tools_write.py  test_unit_outdated.py  test_unit_pkg_group.py  test_unit_scanner_remote.py  test_unit_source_service.py  test_unit_text_match.py  test_unit_upgrade.py
apps/aam-web/: README.md  index.html  package.json  project.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/aam-web/src/: App.tsx  main.tsx
deploy/: .env.example  DEPLOYMENT_REVIEW.md  Dockerfile.backend  Dockerfile.backend.dev  Dockerfile.web  Dockerfile.web.dev  README.md  docker-compose.dev.yml  docker-compose.yml  init-db.sql  nginx-web.conf  nginx.conf
deploy/docker/backend/: Dockerfile  Dockerfile.dev
deploy/docker/web/: Dockerfile  Dockerfile.dev
deploy/gcp/: README.md  cloudbuild-web.yaml  deploy_docs.sh  deploy_web_dev.sh
deploy/local/: .env.example  README.md  docker-compose.dev.yml  docker-compose.yml  init-db.sql
deploy/local/nginx/: nginx-web.conf  nginx.conf
deploy/pulumi/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.test.yaml  Pulumi.yaml  README.md  __main__.py  config.py  requirements.txt
deploy/pulumi/components/: __init__.py  backend_service.py  cache.py  database.py  domain_mapping.py  load_balancer.py  monitoring.py  network.py  registry.py  secrets.py  storage.py  web_service.py
deploy/ssl/: .gitkeep
docs/: CLI_RESTRUCTURE_ANALYSIS.md  CNAME  DESIGN.md  HTTP_REGISTRY_SPEC.md  USER_GUIDE.md  spec_convert_1.md
docs/specs/: SPEC-convert-command.md
docs/user_docs/: mkdocs.yml  project.json  requirements-docs.txt
docs/user_docs/docs/: index.md
specs/001-cli-local-repository/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cli-local-repository/checklists/: requirements.md
specs/001-cli-local-repository/contracts/: cli-commands.md
specs/002-mcp-server-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-mcp-server-cli/checklists/: requirements.md
specs/002-mcp-server-cli/contracts/: mcp-resources.md  mcp-tools.md
specs/003-git-source-scanning/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-npm-style-source-workflow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-improve-search-ux/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+89 files in other folders)
